--- a/private_Library/private_Application Support/nushell/env.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/env.nu.tmpl
@@ -80,9 +80,9 @@ $env.NU_PLUGIN_DIRS = [
 
 # To add entries to PATH (on Windows you might use Path), you can use the following pattern:
 $env.PATH = ($env.PATH | split row (char esep) |
-prepend /Users/jeong-in-u/go/bin |
-prepend /Users/jeong-in-u/.cargo/bin |
-prepend /Users/jeong-in-u/.sdkman/candidates/java/current/bin |
+prepend {{ .chezmoi.homeDir }}/go/bin |
+prepend {{ .chezmoi.homeDir }}/.cargo/bin |
+prepend {{ .chezmoi.homeDir }}/.sdkman/candidates/java/current/bin |
 prepend /opt/homebrew/bin |
 prepend /opt/homebrew/sbin |
 prepend /usr/local/bin |
@@ -93,21 +93,34 @@ prepend /usr/sbin |
 prepend /sbin |
 prepend /usr/local/go/bin |
 prepend /usr/local/share/dotnet |
-prepend /Users/jeong-in-u/.dotnet/tools |
+prepend {{ .chezmoi.homeDir }}/.dotnet/tools |
 prepend /Library/Frameworks/Mono.framework/Versions/Current/Commands |
 prepend /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin |
 prepend /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin |
 prepend /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin |
-prepend /Users/jeong-in-u/.cargo/bin |
+prepend {{ .chezmoi.homeDir }}/.cargo/bin |
 prepend /Applications/kitty.app/Contents/MacOS |
-prepend /Users/jeong-in-u/Library/`Application Support`/JetBrains/Toolbox/scripts |
+prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts |
 prepend /usr/local/go/bin |
-prepend /Users/jeong-in-u/go/bin |
-prepend /opt/homebrew/opt/postgresql@15/bin )
+prepend {{ .chezmoi.homeDir }}/go/bin |
+prepend /opt/homebrew/opt/postgresql@15/bin
+prepend /Users/inust/.rbenv/shims
+prepend /opt/local/bin
+prepend /opt/local/sbin
+prepend /Library/Apple/usr/bin
+prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts
+)
+
+$env.HOME = '{{ .chezmoi.homeDir }}'
+$env.HOMEBREW_CELLAR = '/opt/homebrew/Cellar'
+$env.HOMEBREW_PREFIX = '/opt/homebrew'
+$env.HOMEBREW_REPOSITORY = '/opt/homebrew'
+$env.JAVA_HOME = '{{ .chezmoi.homeDir }}/sdkman/candidates/java/current'
+$env.ZSH = $env.HOME + "/.oh-my-zsh"
+$env.NVM_DIR = $env.HOME + "/.nvm"
 
 $env.EDITOR = "nvim"
 $env.STARSHIP_SHELL = "nu"
-$env.OPENAI_API_KEY = "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"
 mkdir ~/.cache/starship
 starship init nu | save -f ~/.cache/starship/init.nu
 zoxide init nushell | save -f ~/.zoxide.nu
