--- a/private_Library/private_Application Support/nushell/env.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/env.nu.tmpl
@@ -103,13 +103,12 @@ prepend /Applications/kitty.app/Contents/MacOS |
 prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts |
 prepend /usr/local/go/bin |
 prepend {{ .chezmoi.homeDir }}/go/bin |
-prepend {{ .chezmoi.homeDir }}/opt/postgresql@15/bin
-prepend {{ .chezmoi.homeDir }}/.rbenv/shims
-prepend /opt/local/bin
-prepend /opt/local/sbin
-prepend /Library/Apple/usr/bin
-prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts
-)
+prepend {{ .chezmoi.homeDir }}/opt/postgresql@15/bin |
+prepend {{ .chezmoi.homeDir }}/.rbenv/shims |
+prepend /opt/local/bin |
+prepend /opt/local/sbin |
+prepend /Library/Apple/usr/bin |
+prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts |)
 
 $env.HOME = '{{ .chezmoi.homeDir }}'
 $env.HOMEBREW_CELLAR = '/opt/homebrew/Cellar'
