--- a/private_Library/private_Application Support/nushell/config.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/config.nu.tmpl
@@ -799,5 +799,5 @@ source {{ .chezmoi.homeDir }}/.asdf/asdf.nu
 
 use ~/.cache/starship/init.nu
 let text = (figlet -w 150 -f trek -c "Hello Inu,\n Welcome to the Dev World!" )
-neofetch --iterm2 ~/Documents/frank_ocean.jpeg
+neofetch --iterm2 ~/Documents/blond.jpeg
 source ~/.zoxide.nu
