--- a/private_Library/private_Application Support/nushell/config.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/config.nu.tmpl
@@ -783,10 +783,10 @@ alias tree = exa --tree -L 2 -alh
 use ~/.cache/starship/init.nu
 let text = (figlet -w 90 -f usaflag -c "Welcome to Inu's shell")
 if $env.TERM == xterm-kitty {
-    neofetch --kitty ~/Documents//cool_wallpaper.jpg
+    neofetch --kitty ~/Documents/cool_wallpaper.jpg
 }
 match $env.TERM_PROGRAM {
-    WezTerm => {neofetch --iterm2 ~/Documents/cool_wallpaper.jpg},
+    WezTerm => {neofetch --iterm2 ~/Documents/city.jpeg},
     rio => {neofetch --w3m ~/Documents/cool_wallpaper.jpg},
     _ => {}
 }
@@ -799,5 +799,5 @@ source {{ .chezmoi.homeDir }}/.asdf/asdf.nu
 
 use ~/.cache/starship/init.nu
 let text = (figlet -w 150 -f trek -c "Hello Inu,\n Welcome to the Dev World!" )
-neofetch --iterm2 ~/smoking_lucy.jpeg
+# neofetch --iterm2 ~/smoking_lucy.jpeg
 source ~/.zoxide.nu
