--- a/private_Library/private_Application Support/nushell/env.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/env.nu.tmpl
@@ -119,11 +119,11 @@ $env.ZSH = $env.HOME + "/.oh-my-zsh"
 $env.NVM_DIR = $env.HOME + "/.nvm"
 $env.XDG_DATA_HOME = $env.HOME + "/.local/share"
 
-{{ if eq .chezmoi.username "inust" }}
+// {{ if eq .chezmoi.username "inust" }}
 $env.EDITOR = "nvim"
-{{ else if eq .chezmoi.username "jeong-in-u" }}
-$env.EDITOR = "hx"
-{{ end }}
+// {{ else if eq .chezmoi.username "jeong-in-u" }}
+// $env.EDITOR = "hx"
+// {{ end }}
 $env.STARSHIP_SHELL = "nu"
 mkdir ~/.cache/starship
 starship init nu | save -f ~/.cache/starship/init.nu
