--- a/dot_taskrc.tmpl
+++ b/dot_taskrc.tmpl
@@ -15,7 +15,7 @@
 # Use the command 'task show' to see all defaults and overrides
 
 # Files
-data.location={{ .chezmoi.username }}.task
+data.location={{ .chezmoi.homeDir }}/.task
 
 # To use the default location of the XDG directories,
 # move this configuration file from ~/.taskrc to ~/.config/task/taskrc and uncomment below
