--- a/private_Library/private_Application Support/nushell/env.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/env.nu.tmpl
@@ -118,6 +118,7 @@ $env.JAVA_HOME = '{{ .chezmoi.homeDir }}/sdkman/candidates/java/current'
 $env.ZSH = $env.HOME + "/.oh-my-zsh"
 $env.NVM_DIR = $env.HOME + "/.nvm"
 $env.XDG_DATA_HOME = $env.HOME + "/.local/share"
+$env.TASKDATA = '{{ .chezmoi.homeDir }}/taskd'
 
 
 $env.EDITOR = "nvim"
