--- a/private_Library/private_Application Support/nushell/env.nu.tmpl
+++ b/private_Library/private_Application Support/nushell/env.nu.tmpl
@@ -108,7 +108,8 @@ prepend {{ .chezmoi.homeDir }}/.rbenv/shims |
 prepend /opt/local/bin |
 prepend /opt/local/sbin |
 prepend /Library/Apple/usr/bin |
-prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts )
+prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts |
+prepend /opt/homebrew/opt/llvm/bin )
 
 $env.HOME = '{{ .chezmoi.homeDir }}'
 $env.HOMEBREW_CELLAR = '/opt/homebrew/Cellar'
