--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -24,21 +24,45 @@ set -x PATH $PATH (go env GOPATH)/bin
 set -gx EDITOR nvim
 
 # Convert other exports
-set -gx HOME /Users/inust
+set -gx HOME {{ .chezmoi.homeDir }}
 set -gx HOMEBREW_CELLAR /opt/homebrew/Cellar
 set -gx HOMEBREW_PREFIX /opt/homebrew
 set -gx HOMEBREW_REPOSITORY /opt/homebrew
 set -gx XDG_DATA_HOME $HOME/.local/share
-set -gx TASKDDATA /Users/inust/taskd
+set -gx TASKDDATA {{ .chezmoi.homeDir }}/taskd
 set -x ZSH $HOME/.oh-my-zsh
-set -x KAFKA_CONNECT_HOME /Users/inust/projects/etc/confluent-7.3.0
+set -x KAFKA_CONNECT_HOME {{ .chezmoi.homeDir }}/projects/etc/confluent-7.3.0
 set -x NVM_DIR $HOME/.nvm
 set -x PROMETHEUS ~/projects/etc/prometheus-2.41.0.darwin-amd64
 set -x GRAFANA ~/projects/etc/grafana-9.3.2
 set -x SDKMAN_DIR $HOME/.sdkman
 set -x HELIX_RUNTIME /home/user-name/src/helix/runtime
 set -x PATH /usr/local/bin /opt/homebrew/bin /opt/homebrew/bin/nvim /System/Cryptexes/App/usr/bin /usr/bin /bin /usr/sbin /sbin /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin /Library/Apple/usr/bin /Applications/VMware\ Fusion.app/Contents/Public /Library/Frameworks/Mono.framework/Versions/Current/Commands /Applications/Postgres.app/Contents/Versions/latest/bin /Users/inust/.rbenv/shims /Users/inust/.rbenv/bin /Users/inust/.sdkman/candidates/springboot/current/bin /Users/inust/.sdkman/candidates/java/current/bin /Users/inust/.nvm/versions/node/v18.15.0/bin /opt/local/bin /opt/local/sbin /opt/homebrew/sbin /Users/inust/.cargo/bin /Applications/kitty.app/Contents/MacOS /Users/inust/Library/Application\ Support/JetBrains/Toolbox/scripts /usr/local/go/bin /Users/inust/go/bin /opt/homebrew/opt/postgresql@15/bin
-fish_add_path /Users/inust/go/bin /Users/inust/.cargo/bin /Users/inust/.sdkman/candidates/java/current/bin /opt/homebrew/bin /opt/homebrew/sbin /usr/local/bin /System/Cryptexes/App/usr/bin /usr/bin /bin /usr/sbin /sbin /usr/local/go/bin /usr/local/share/dotnet /Users/inust/.dotnet/tools /Library/Frameworks/Mono.framework/Versions/Current/Commands /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin /Applications/kitty.app/Contents/MacOS /Users/inust/Library/Application\ Support/JetBrains/Toolbox/scripts /Users/inust/opt/postgresql@15/bin /Users/inust/.rbenv/shims /opt/local/bin /opt/local/sbin /Library/Apple/usr/bin
+fish_add_path {{ .chezmoi.homeDir }}/go/bin
+fish_add_path {{ .chezmoi.homeDir }}/.cargo/bin
+fish_add_path {{ .chezmoi.homeDir }}/.sdkman/candidates/java/current/bin
+fish_add_path /opt/homebrew/bin
+fish_add_path /opt/homebrew/sbin
+fish_add_path /usr/local/bin
+fish_add_path /System/Cryptexes/App/usr/bin
+fish_add_path /usr/bin
+fish_add_path /bin
+fish_add_path /usr/sbin
+fish_add_path /sbin
+fish_add_path /usr/local/go/bin
+fish_add_path /usr/local/share/dotnet
+fish_add_path {{ .chezmoi.homeDir }}/.dotnet/tools
+fish_add_path /Library/Frameworks/Mono.framework/Versions/Current/Commands
+fish_add_path /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin
+fish_add_path /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin
+fish_add_path /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin
+fish_add_path /Applications/kitty.app/Contents/MacOS
+fish_add_path {{ .chezmoi.homeDir }}/Library/Application\ Support/JetBrains/Toolbox/scripts
+fish_add_path {{ .chezmoi.homeDir }}/opt/postgresql@15/bin
+fish_add_path {{ .chezmoi.homeDir }}/.rbenv/shims
+fish_add_path /opt/local/bin
+fish_add_path /opt/local/sbin
+fish_add_path /Library/Apple/usr/bin
 
 zoxide init fish | source
 source ~/.asdf/asdf.fish
