--- a/private_dot_config/nushell/env.nu.tmpl
+++ b/private_dot_config/nushell/env.nu.tmpl
@@ -1,4 +1,4 @@
-# Nushell Environment Config File
+Nushell Environment Config File
 #
 # version = "0.84.0"
 
@@ -80,9 +80,9 @@ $env.NU_PLUGIN_DIRS = [
 
 # To add entries to PATH (on Windows you might use Path), you can use the following pattern:
 $env.PATH = ($env.PATH | split row (char esep) |
-prepend /home/inu/go/bin |
-prepend /home/inu/.cargo/bin |
-prepend /home/inu/.sdkman/candidates/java/current/bin |
+prepend {{ .chezmoi.homeDir }}/go/bin |
+prepend {{ .chezmoi.homeDir }}/.cargo/bin |
+prepend {{ .chezmoi.homeDir }}/.sdkman/candidates/java/current/bin |
 prepend /opt/homebrew/bin |
 prepend /opt/homebrew/sbin |
 prepend /usr/local/bin |
@@ -93,33 +93,33 @@ prepend /usr/sbin |
 prepend /sbin |
 prepend /usr/local/go/bin |
 prepend /usr/local/share/dotnet |
-prepend /home/inu/.dotnet/tools |
+prepend {{ .chezmoi.homeDir }}/.dotnet/tools |
 prepend /Library/Frameworks/Mono.framework/Versions/Current/Commands |
 prepend /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin |
 prepend /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin |
 prepend /var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin |
-prepend /home/inu/.cargo/bin |
+prepend {{ .chezmoi.homeDir }}/.cargo/bin |
 prepend /Applications/kitty.app/Contents/MacOS |
-prepend /home/inu/Library/`Application Support`/JetBrains/Toolbox/scripts |
+prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts |
 prepend /usr/local/go/bin |
-prepend /home/inu/go/bin |
-prepend /home/inu/opt/postgresql@15/bin |
-prepend /home/inu/.rbenv/shims |
+prepend {{ .chezmoi.homeDir }}/go/bin |
+prepend {{ .chezmoi.homeDir }}/opt/postgresql@15/bin |
+prepend {{ .chezmoi.homeDir }}/.rbenv/shims |
 prepend /opt/local/bin |
 prepend /opt/local/sbin |
 prepend /Library/Apple/usr/bin |
-prepend /home/inu/Library/`Application Support`/JetBrains/Toolbox/scripts |
+prepend {{ .chezmoi.homeDir }}/Library/`Application Support`/JetBrains/Toolbox/scripts |
 prepend /opt/homebrew/opt/llvm/bin )
 
-$env.HOME = '/home/inu'
+$env.HOME = '{{ .chezmoi.homeDir }}'
 $env.HOMEBREW_CELLAR = '/opt/homebrew/Cellar'
 $env.HOMEBREW_PREFIX = '/opt/homebrew'
 $env.HOMEBREW_REPOSITORY = '/opt/homebrew'
-$env.JAVA_HOME = '/home/inu/sdkman/candidates/java/current'
+$env.JAVA_HOME = '{{ .chezmoi.homeDir }}/sdkman/candidates/java/current'
 $env.ZSH = $env.HOME + "/.oh-my-zsh"
 $env.NVM_DIR = $env.HOME + "/.nvm"
 $env.XDG_DATA_HOME = $env.HOME + "/.local/share"
-$env.TASKDDATA = '/home/inu/taskd'
+$env.TASKDDATA = '{{ .chezmoi.homeDir }}/taskd'
 
 
 $env.EDITOR = "nvim"
