--- a/run_once_before_install_packages.sh.tmpl
+++ b/run_once_before_install_packages.sh.tmpl
@@ -41,6 +41,9 @@ flatpak run one.ablaze.floorp
 # armcord
 flatpak install flathub xyz.armcord.ArmCord
 flatpak run xyz.armcord.ArmCord
+
+#spotify
+cargo install spotifyd --locked
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
 cd ~
