--- a/run_once_before_install_packages.sh.tmpl
+++ b/run_once_before_install_packages.sh.tmpl
@@ -36,11 +36,12 @@ flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.f
 
 # floorp
 flatpak install flathub one.ablaze.floorp
-flatpak run one.ablaze.floorp
 
 # armcord
 flatpak install flathub xyz.armcord.ArmCord
-flatpak run xyz.armcord.ArmCord
+
+#obsidian
+flatpak install flathub md.obsidian.Obsidian
 
 #spotify
 sudo dnf install alsa-lib-devel
