Update .config/nushell/config.nu Update .config/nvim/lazy-lock.json Update .config/spotifyd/spotifyd.conf Update install_packages.sh

--- a/private_dot_config/nushell/config.nu.tmpl
+++ b/private_dot_config/nushell/config.nu.tmpl
@@ -775,8 +775,8 @@ $env.config = {
 # source ~/.oh-my-posh.nu
 
 alias cat = bat
-alias ll = exa -alh
-alias tree = exa --tree -L 2 -alh
+alias ll = eza -alh
+alias tree = eza --tree -L 2 -alh
 
 use ~/.cache/starship/init.nu
 # if $env.TERM == xterm-kitty {
