--- a/run_once_before_install_packages.sh.tmpl
+++ b/run_once_before_install_packages.sh.tmpl
@@ -55,7 +55,7 @@ sudo dnf install -y bat
 sudo dnf install -y eza
 
 #fonts
-cp -r ~/.config/fonts/ /usr/local/share/fonts/
+cp -r ~/.config/fonts/ /usr/local/share/
 sudo fc-cache-v
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
