--- a/private_dot_config/spotifyd/spotifyd.conf.tmpl
+++ b/private_dot_config/spotifyd/spotifyd.conf.tmpl
@@ -1,6 +1,6 @@
 [spotifyd]
-username = "31p6kojwxm5r4vr4vnls7oqwptzi"
-password = "3251in8458"
+username = {{ (awsSecretsManager "spotify_credential").username }}
+password ={{ (awsSecretsManager "spotify_credential").password }}
 backend = "alsa"
 # device_name = "fedora_asahi"
 # control = "fedora_asahi"
