--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -32,6 +32,10 @@ source ~/.zshrc
 sudo dnf install -y openssl-devel pkg-config
 cargo install nu
 
+#elixir
+sudo dnf intall -y erlang
+sudo dnf install -y elixir
+
 sudo dnf copr enable atim/starship
 sudo dnf install -y starship
 sudo dnf copr enable atim/zoxide
