--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -1,6 +1,9 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
 
+#battery charge limit
+echo 80 | sudo tee /sys/class/power_supply/macsmc-battery/charge_control_end_threshold
+
 sudo dnf install -y firefox
 
 # korean support
