--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -103,16 +103,19 @@ end)
 
 return {
 	ssh_domains = {
+    {{ if eq .chezmoi.os "linux" -}}
 		{
 			name = "mbp.darwin",
 			remote_address = "172.28.231.247",
 			username = "jeong-in-u",
 		},
+    {{ else if eq .chezmoi.os "darwin" -}}
 		{
 			name = "mstudio.linux",
 			remote_address = "172.28.183.180",
 			username = "inu",
 		},
+    {{ end -}}
 	},
 	color_schemes = {
 		[selected_scheme] = scheme,
