--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -58,6 +58,9 @@ sudo dnf install -y bat
 #exa
 sudo dnf install -y eza
 
+#elixir
+asdf plugin add erlang & asdf install erlang latest & asdf global erlang latest
+asdf plugin add elixir & asdf install elixir latest & asdf global elixir latest
 
 
 #awscli
