--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -59,8 +59,16 @@ sudo dnf install -y bat
 sudo dnf install -y eza
 
 #elixir
-asdf plugin add erlang & asdf install erlang latest & asdf global erlang latest
-asdf plugin add elixir & asdf install elixir latest & asdf global elixir latest
+asdf plugin add erlang 
+#asdf install erlang latest
+#asdf global erlang latest
+#asdf plugin add elixir 
+#asdf install elixir latest 
+#asdf global elixir latest
+
+asdf plugin add nodejs
+asdf install nodejs latest
+asdf global nodejs latest
 
 #awscli
 sudo dnf install -y awscli
