--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -114,10 +114,15 @@ return {
 			remote_address = "172.28.231.247",
 			username = "jeong-in-u",
 		},
+    {
+      name = "mbp.linux", 
+      remote_address = "172.28.191.230",
+      username = "inu",
+      },
     {{ else if eq .chezmoi.os "darwin" -}}
 		{
 			name = "mstudio.linux",
-			remote_address = "172.28.183.180",
+			remote_address = "172.28.59.172",
 			username = "inu",
 		},
     {{ end -}}
