--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -66,9 +66,13 @@ asdf plugin add erlang
 #asdf install elixir latest 
 #asdf global elixir latest
 
+#nodejs
 asdf plugin add nodejs
 asdf install nodejs latest
 asdf global nodejs latest
+
+#lastpass
+sudo dnf install -y lastpass-cli
 
 #awscli
 sudo dnf install -y awscli
