--- a/dot_aws/private_credentials.tmpl
+++ b/dot_aws/private_credentials.tmpl
@@ -1,3 +1,3 @@
 [default]
-aws_access_key_id = {{ (index (lastpass "aws_inu_api_key") 0).note.api_key }}
-aws_secret_access_key = {{ (index (lastpass "aws_inu_api_key") 0).note.api_secret }}
+aws_access_key_id = {{ (index (lastpass "aws_inu_api_key") 0).api_key -}}
+aws_secret_access_key = {{ (index (lastpass "aws_inu_api_key") 0).api_secret -}}
