--- a/private_dot_config/nushell/env.nu.tmpl
+++ b/private_dot_config/nushell/env.nu.tmpl
@@ -127,4 +127,4 @@ $env.EDITOR = "nvim"
 $env.STARSHIP_SHELL = "nu"
 mkdir ~/.cache/starship
 starship init nu | save -f ~/.cache/starship/init.nu
-zoxide init nushell | str replace --all "-- $rest" "-- ...$rest" | str replace --all "def-env" "def --env" | save -f ~/.zoxide.nu
+zoxide init nushell | str replace --all "def-env" "def --env" | save -f ~/.zoxide.nu
