Update Brewfile Update install-fonts.sh Update install-packages.sh

--- a/run_once_after_install-fonts.sh.tmpl
+++ b/run_once_after_install-fonts.sh.tmpl
@@ -3,4 +3,6 @@
 #fonts
 sudo cp -r {{ .chezmoi.homeDir }}/.config/fonts/ /usr/local/share/
 sudo fc-cache -v
+{{ else if eq .chezmoi.os "darwin" -}}
+brew bundle install
 {{ end -}}
