--- a/run_once_after_install-fonts.sh.tmpl
+++ b/run_once_after_install-fonts.sh.tmpl
@@ -1,8 +1,7 @@
 #!/bin/sh
-{{ if eq .chezmoi.os "linux" -}}
 #fonts
 sudo cp -r {{ .chezmoi.homeDir }}/.config/fonts/ /usr/local/share/
 sudo fc-cache -v
-{{ else if eq .chezmoi.os "darwin" -}}
+{{ if eq .chezmoi.os "darwin" -}}
 brew bundle install
 {{ end -}}
