--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -130,7 +130,11 @@ return {
 	color_schemes = {
 		[selected_scheme] = scheme,
 	},
+  {{ if eq .chezmoi.os "linux" -}}
 	font_size = 10.0,
+  {{ else if eq .chezmoi.os "darwin" -}}
+  font_size = 11.0
+  {{ end -}}
 	color_scheme = selected_scheme,
 	hide_tab_bar_if_only_one_tab = true,
 	adjust_window_size_when_changing_font_size = false,
