--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -108,7 +108,6 @@ end)
 
 return {
 	ssh_domains = {
-    {{ if eq .chezmoi.os "linux" -}}
 		{
 			name = "mbp.darwin",
 			remote_address = "172.28.231.247",
@@ -119,13 +118,16 @@ return {
       remote_address = "172.28.191.230",
       username = "inu",
       },
-    {{ else if eq .chezmoi.os "darwin" -}}
 		{
 			name = "mstudio.linux",
 			remote_address = "172.28.59.172",
 			username = "inu",
 		},
-    {{ end -}}
+    {
+        name = "mstudio.darwin",
+        remote_address = "172.28.168.126",
+        username = "inu"
+      }
 	},
 	color_schemes = {
 		[selected_scheme] = scheme,
