Update .config/wezterm/wezterm.lua Update install-packages.sh

--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -59,15 +59,15 @@ sudo dnf install -y bat
 sudo dnf install -y eza
 
 #elixir
-asdf plugin add erlang 
-#asdf install erlang latest
-#asdf global erlang latest
-#asdf plugin add elixir 
-#asdf install elixir latest 
-#asdf global elixir latest
+asdf plugin-add erlang 
+asdf install erlang latest
+asdf global-erlang latest
+asdf plugin add elixir 
+asdf install elixir latest 
+asdf global elixir latest
 
 #nodejs
-asdf plugin add nodejs
+asdf plugin-add nodejs
 asdf install nodejs latest
 asdf global nodejs latest
 
