--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -59,6 +59,8 @@ sudo dnf install -y bat
 sudo dnf install -y eza
 
 #elixir
+sudo dnf install -y erlang
+sudo dnf install -y elixir
 #asdf plugin-add erlang 
 #asdf install erlang latest
 #asdf global-erlang latest
