--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -84,6 +84,10 @@ sudo dnf5 install -y awscli
 #lpass
 sudo dnf5 install -y lastpass-cli
 lpass login inujung@momenti.tv
+
+#zero-tier
+curl -s https://install.zerotier.com | sudo bash
+sudo zerotier-cli join {{ (index (lastpass "zerotier_network_id") 0).note.publicKey -}}
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
 brew update
