--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -90,6 +90,7 @@ curl -s https://install.zerotier.com | sudo bash
 sudo zerotier-cli join {{ (index (lastpass "zerotier_network_id") 0).note.publicKey -}}
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 brew update
 brew install awscli
 brew install lastpass-cli
