--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -127,7 +127,7 @@ return {
     {
       name = "mstudio.darwin",
       remote_address = "172.28.128.136",
-      username = "inu"
+      username = "jeong-in-u"
     },
 	},
 	color_schemes = {
