--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -90,6 +90,15 @@ lpass login inujung@momenti.tv
 #!/bin/sh
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+
+#asdf
+git clone https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.14.0
+
+#nodejs
+asdf plugin-add nodejs
+asdf install nodejs latest
+asdf global nodejs latest
+
 brew update
 brew install awscli
 brew install lastpass-cli
