--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -138,6 +138,7 @@ return {
 	color_schemes = {
 		[selected_scheme] = scheme,
 	},
+  enable_wayland=false,
   {{ if eq .chezmoi.os "linux" -}}
 	font_size = 9.0,
   {{ else if eq .chezmoi.os "darwin" -}}
