--- a/private_dot_config/nushell/config.nu.tmpl
+++ b/private_dot_config/nushell/config.nu.tmpl
@@ -794,3 +794,4 @@ source {{ .chezmoi.homeDir }}/.asdf/asdf.nu
 source ~/.zoxide.nu
 
 use ~/.cache/starship/init.nu
+alias code=code --force-device-scale-factor=2
