--- a/private_dot_config/nushell/env.nu.tmpl
+++ b/private_dot_config/nushell/env.nu.tmpl
@@ -79,7 +79,12 @@ $env.NU_PLUGIN_DIRS = [
 ]
 
 # To add entries to PATH (on Windows you might use Path), you can use the following pattern:
+
+$env.BUN_INSTALL = $env.HOME + "/.bun"
+
+
 $env.PATH = ($env.PATH | split row (char esep) |
+prepend $"($env.BUN_INSTALL)/bin" |
 prepend {{ .chezmoi.homeDir }}/go/bin |
 prepend {{ .chezmoi.homeDir }}/.cargo/bin |
 prepend {{ .chezmoi.homeDir }}/.sdkman/candidates/java/current/bin |
