Update .config/nvim/lazy-lock.json Update install-packages.sh

--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -83,7 +83,7 @@ sudo dnf5 install -y awscli
 
 #lpass
 sudo dnf5 install -y lastpass-cli
-lpass login inujung@momenti.tv
+lpass login inust33@gmail.com
 
 
 {{ else if eq .chezmoi.os "darwin" -}}
@@ -102,5 +102,5 @@ asdf global nodejs latest
 brew update
 brew install awscli
 brew install lastpass-cli
-lpass login inujung@momenti.tv
+lpass login inust33@gmail.com
 {{ end -}}
