--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -103,9 +103,17 @@ brew install awscli
 brew install lastpass-cli
 {{ end -}}
 
+#nix install
+curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | \
+  sh -s -- install
+
 set -euo pipefail
 
 FLAKES_DIR="$HOME/.config/flakes"
+NIX_FLAGS="--extra-experimental-features nix-command --extra-experimental-features flakes --accept-flake-config"
+
+# Create the flakes directory if it doesn't exist
+mkdir -p "$FLAKES_DIR"
 
 # Iterate through all directories in ~/.config/flakes
 find "$FLAKES_DIR" -type d -mindepth 1 -maxdepth 1 | while read -r flake_dir; do
@@ -113,7 +121,7 @@ find "$FLAKES_DIR" -type d -mindepth 1 -maxdepth 1 | while read -r flake_dir; do
         echo "Installing flake from: $flake_dir"
         (
             cd "$flake_dir"
-            if ! nix profile install .# ; then
+            if ! nix profile install $NIX_FLAGS .# ; then
                 echo "Error installing flake from $flake_dir"
                 # Uncomment next line if you want to exit on first error
                 # exit 1
