--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -111,6 +111,8 @@ NIX_FLAGS="--extra-experimental-features nix-command --extra-experimental-featur
 # Create the flakes directory if it doesn't exist
 mkdir -p "$FLAKES_DIR"
 
+nix-shell -p curl git
+
 # Iterate through all directories in ~/.config/flakes
 find "$FLAKES_DIR" -type d -mindepth 1 -maxdepth 1 | while read -r flake_dir; do
     if [ -f "$flake_dir/flake.nix" ]; then
