Update .config/nushell/env.nu Update .config/nvim/lazy-lock.json Update .config/nvim/lazyvim.json Update .config/nvim/lua/plugins/others.lua Update .config/nvim/lua/plugins/themes.lua

--- a/private_dot_config/nushell/env.nu.tmpl
+++ b/private_dot_config/nushell/env.nu.tmpl
@@ -128,6 +128,9 @@ $env.TASKDDATA = '{{ .chezmoi.homeDir }}/taskd'
 
 
 $env.EDITOR = "nvim"
+$env.LC_CTYPE = "ko_KR.UTF-8"
+$env.LANG = "ko_KR.UTF-8"
+
 
 $env.STARSHIP_SHELL = "nu"
 mkdir ~/.cache/starship
