--- a/private_dot_config/nushell/env.nu.tmpl
+++ b/private_dot_config/nushell/env.nu.tmpl
@@ -128,8 +128,8 @@ $env.TASKDDATA = '{{ .chezmoi.homeDir }}/taskd'
 
 
 $env.EDITOR = "nvim"
-$env.LC_CTYPE = "ko_KR.UTF-8"
-$env.LANG = "ko_KR.UTF-8"
+# $env.LC_CTYPE = "ko_KR.UTF-8"
+# $env.LANG = "ko_KR.UTF-8"
 
 
 $env.STARSHIP_SHELL = "nu"
