--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -93,7 +93,7 @@ wezterm.on("format-tab-title", function(tab, tabs, panes, config, hover, max_wid
 	}
 end)
 
-return {
+local config= {
 	ssh_domains = {
 		{
 			name = "mbp.darwin",
@@ -174,3 +174,11 @@ return {
 		},
 	},
 }
+for _, gpu in ipairs(wezterm.gui.enumerate_gpus()) do
+	if gpu.backend == "Vulkan" and gpu.device_type == "IntegratedGpu" then
+		config.webgpu_preferred_adapter = gpu
+		config.front_end = "WebGpu"
+		break
+	end
+end
+return config
