--- a/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -140,6 +140,7 @@ local config= {
 	line_height = 1.3,
 	font = wezterm.font_with_fallback({
 		"Berkeley Mono",
+    {family="NanumGothicCoding"},
 		{ family = "Lilex", harfbuzz_features = { "calt", "ss02", "ss04" } },
 		{ family = "Symbols Nerd Font", scale = 0.75 },
 	}),
