--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -6,11 +6,11 @@ echo 80 | sudo tee /sys/class/power_supply/macsmc-battery/charge_control_end_thr
 
 sudo dnf install -y dnf5
 
-sudo dnf5 install -y firefox
+sudo dnf install -y firefox
 
 # korean support
-sudo dnf5 install -y fcitx5 fcitx5-hangul
-sudo dnf5 install -y glibc-langpack-ko
+sudo dnf install -y fcitx5 fcitx5-hangul
+sudo dnf install -y glibc-langpack-ko
 localectl set-locale LANG-ko_KR.UTF-8
 
 #asdf
@@ -20,10 +20,10 @@ git clone https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.14.1
 sudo dnf copr enable atim/lazygit -y
 sudo dnf5 install -y lazygit
 
-sudo dnf copr enable wezfurlong/wezterm-nightly
+sudo dnf copr enable -y wezfurlong/wezterm-nightly
 sudo dnf5 install -y wezterm
 
-sudo dnf copr enable agriffis/neovim-nightly
+sudo dnf copr enable -y agriffis/neovim-nightly
 sudo dnf5 install -y neovim
 
 #rust install
@@ -33,10 +33,13 @@ source ~/.bashrc
 sudo dnf5 install -y openssl-devel pkg-config
 cargo install nu
 
-sudo dnf copr enable atim/starship
+sudo dnf copr enable -y atim/starship
 sudo dnf5 install -y starship
-sudo dnf copr enable atim/zoxide
+sudo dnf copr enable -y atim/zoxide
 sudo dnf5 install -y zoxide
+
+sudo dnf copr enable architektapx/zen-browser
+sudo dnf install zen-browser-twilight
 
 #flatpak
 sudo dnf5 install -y flatpak
